friday eod, tableau

--- a/riley_capstone_namus.ipynb
+++ b/riley_capstone_namus.ipynb
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "2a9a35e9",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1483,7 @@
        "[804 rows x 16 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,8 +1494,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "a70e995a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "namus.to_csv('data/finalnamus.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a8af8650",
+   "id": "4060c90e",
    "metadata": {},
    "outputs": [],
    "source": []
