--- a/riley_capstone_namus.ipynb
+++ b/riley_capstone_namus.ipynb
@@ -1169,343 +1169,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "2a9a35e9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Case Number</th>\n",
-       "      <th>DLC</th>\n",
-       "      <th>Last Name</th>\n",
-       "      <th>First Name</th>\n",
-       "      <th>Missing Age</th>\n",
-       "      <th>City</th>\n",
-       "      <th>County</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Biological Sex</th>\n",
-       "      <th>Race / Ethnicity</th>\n",
-       "      <th>Date Modified</th>\n",
-       "      <th>Race/Ethn 1</th>\n",
-       "      <th>Race/Ethn 2</th>\n",
-       "      <th>Race/Ethn 3</th>\n",
-       "      <th>Race/Ethn 4</th>\n",
-       "      <th>Race/Ethn 5</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>MP112423</td>\n",
-       "      <td>2023-11-29</td>\n",
-       "      <td>Mejia-Torres</td>\n",
-       "      <td>Harlin</td>\n",
-       "      <td>17</td>\n",
-       "      <td>Johnson City</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Hispanic / Latino</td>\n",
-       "      <td>2023-12-01</td>\n",
-       "      <td>Hispanic / Latino</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>MP112594</td>\n",
-       "      <td>2023-10-29</td>\n",
-       "      <td>Patrick</td>\n",
-       "      <td>Dylan</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Greeneville</td>\n",
-       "      <td>Greene</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>2023-12-04</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>MP111965</td>\n",
-       "      <td>2023-10-27</td>\n",
-       "      <td>Canuto</td>\n",
-       "      <td>Angel</td>\n",
-       "      <td>17</td>\n",
-       "      <td>Nashville</td>\n",
-       "      <td>Davidson</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>2023-11-27</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>MP110999</td>\n",
-       "      <td>2023-10-26</td>\n",
-       "      <td>Matthew</td>\n",
-       "      <td>Westbrook</td>\n",
-       "      <td>17</td>\n",
-       "      <td>Shelbyville</td>\n",
-       "      <td>Bedford</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Black / African American</td>\n",
-       "      <td>2023-11-02</td>\n",
-       "      <td>Black / African American</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>MP111656</td>\n",
-       "      <td>2023-10-23</td>\n",
-       "      <td>Fletcher</td>\n",
-       "      <td>Jettona</td>\n",
-       "      <td>17</td>\n",
-       "      <td>Murfreesboro</td>\n",
-       "      <td>Rutherford</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Black / African American</td>\n",
-       "      <td>2023-11-15</td>\n",
-       "      <td>Black / African American</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23788</th>\n",
-       "      <td>MP13801</td>\n",
-       "      <td>1966-05-20</td>\n",
-       "      <td>Leatherwood</td>\n",
-       "      <td>Anna</td>\n",
-       "      <td>45</td>\n",
-       "      <td>Sevierville</td>\n",
-       "      <td>Sevier</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>2020-04-20</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23809</th>\n",
-       "      <td>MP74556</td>\n",
-       "      <td>1965-05-16</td>\n",
-       "      <td>Smith</td>\n",
-       "      <td>Emmie</td>\n",
-       "      <td>68</td>\n",
-       "      <td>Gilt Edge</td>\n",
-       "      <td>Tipton</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>2023-07-08</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23811</th>\n",
-       "      <td>MP13082</td>\n",
-       "      <td>1965-05-01</td>\n",
-       "      <td>Samples</td>\n",
-       "      <td>Charles</td>\n",
-       "      <td>37</td>\n",
-       "      <td>Tiptonville</td>\n",
-       "      <td>Lake</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>2023-07-08</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23835</th>\n",
-       "      <td>MP103532</td>\n",
-       "      <td>1964-05-01</td>\n",
-       "      <td>Sanders</td>\n",
-       "      <td>Linda</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Kingsport</td>\n",
-       "      <td>Sullivan</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>2023-05-16</td>\n",
-       "      <td>White / Caucasian</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23906</th>\n",
-       "      <td>MP17201</td>\n",
-       "      <td>1960-08-24</td>\n",
-       "      <td>Sands</td>\n",
-       "      <td>Robert</td>\n",
-       "      <td>34</td>\n",
-       "      <td>Friendship</td>\n",
-       "      <td>Crockett</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Uncertain</td>\n",
-       "      <td>2023-06-15</td>\n",
-       "      <td>Uncertain</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>804 rows × 16 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Case Number        DLC     Last Name First Name Missing Age  \\\n",
-       "7        MP112423 2023-11-29  Mejia-Torres     Harlin          17   \n",
-       "56       MP112594 2023-10-29       Patrick      Dylan          14   \n",
-       "60       MP111965 2023-10-27        Canuto      Angel          17   \n",
-       "67       MP110999 2023-10-26       Matthew  Westbrook          17   \n",
-       "79       MP111656 2023-10-23      Fletcher    Jettona          17   \n",
-       "...           ...        ...           ...        ...         ...   \n",
-       "23788     MP13801 1966-05-20   Leatherwood       Anna          45   \n",
-       "23809     MP74556 1965-05-16         Smith      Emmie          68   \n",
-       "23811     MP13082 1965-05-01       Samples    Charles          37   \n",
-       "23835    MP103532 1964-05-01       Sanders      Linda          16   \n",
-       "23906     MP17201 1960-08-24         Sands     Robert          34   \n",
-       "\n",
-       "               City      County State Biological Sex  \\\n",
-       "7      Johnson City  Washington    TN         Female   \n",
-       "56      Greeneville      Greene    TN           Male   \n",
-       "60        Nashville    Davidson    TN           Male   \n",
-       "67      Shelbyville     Bedford    TN           Male   \n",
-       "79     Murfreesboro  Rutherford    TN         Female   \n",
-       "...             ...         ...   ...            ...   \n",
-       "23788   Sevierville      Sevier    TN         Female   \n",
-       "23809     Gilt Edge      Tipton    TN           Male   \n",
-       "23811   Tiptonville        Lake    TN           Male   \n",
-       "23835     Kingsport    Sullivan    TN         Female   \n",
-       "23906    Friendship    Crockett    TN           Male   \n",
-       "\n",
-       "               Race / Ethnicity Date Modified               Race/Ethn 1  \\\n",
-       "7             Hispanic / Latino    2023-12-01         Hispanic / Latino   \n",
-       "56            White / Caucasian    2023-12-04         White / Caucasian   \n",
-       "60            White / Caucasian    2023-11-27         White / Caucasian   \n",
-       "67     Black / African American    2023-11-02  Black / African American   \n",
-       "79     Black / African American    2023-11-15  Black / African American   \n",
-       "...                         ...           ...                       ...   \n",
-       "23788         White / Caucasian    2020-04-20         White / Caucasian   \n",
-       "23809         White / Caucasian    2023-07-08         White / Caucasian   \n",
-       "23811         White / Caucasian    2023-07-08         White / Caucasian   \n",
-       "23835         White / Caucasian    2023-05-16         White / Caucasian   \n",
-       "23906                 Uncertain    2023-06-15                 Uncertain   \n",
-       "\n",
-       "      Race/Ethn 2 Race/Ethn 3 Race/Ethn 4 Race/Ethn 5  \n",
-       "7             NaN         NaN         NaN         NaN  \n",
-       "56            NaN         NaN         NaN         NaN  \n",
-       "60            NaN         NaN         NaN         NaN  \n",
-       "67            NaN         NaN         NaN         NaN  \n",
-       "79            NaN         NaN         NaN         NaN  \n",
-       "...           ...         ...         ...         ...  \n",
-       "23788         NaN         NaN         NaN         NaN  \n",
-       "23809         NaN         NaN         NaN         NaN  \n",
-       "23811         NaN         NaN         NaN         NaN  \n",
-       "23835         NaN         NaN         NaN         NaN  \n",
-       "23906         NaN         NaN         NaN         NaN  \n",
-       "\n",
-       "[804 rows x 16 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "namus.loc[namus['State'] == 'TN']"
+    "namus = namus.loc[namus['State'] == 'TN']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a70e995a",
+   "execution_count": 19,
+   "id": "f8bf5d3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "namus.to_csv('data/finalnamus.csv')"
+    "namus.to_csv('data/namusTN.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4060c90e",
+   "id": "253fad96",
    "metadata": {},
    "outputs": [],
    "source": []
