--- a/riley_capstone.ipynb
+++ b/riley_capstone.ipynb
@@ -5343,7 +5343,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\riley\\AppData\\Local\\Temp\\ipykernel_19656\\2251865425.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\riley\\AppData\\Local\\Temp\\ipykernel_23056\\2251865425.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -8347,13 +8347,193 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "namuspop2020.to_csv('./data/namuspop2020.csv')"
+    "#namuspop2020.to_csv('./data/namuspop2020.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a00a538f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Acadia</th>\n",
+       "      <th>2,669,034</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Annual Visitation and Record Year by Park (190...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RegionName</td>\n",
+       "      <td>ParkName</td>\n",
+       "      <td>TRV</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ParkType</td>\n",
+       "      <td>Year</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alaska Region</td>\n",
+       "      <td>Denali NP &amp; PRES</td>\n",
+       "      <td>427,562</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>National Park</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alaska Region</td>\n",
+       "      <td>Denali NP &amp; PRES</td>\n",
+       "      <td>229,521</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>National Park</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7494</th>\n",
+       "      <td>Southeast  Region</td>\n",
+       "      <td>Virgin Islands NP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>National Park</td>\n",
+       "      <td>1908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7495</th>\n",
+       "      <td>Southeast  Region</td>\n",
+       "      <td>Virgin Islands NP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>National Park</td>\n",
+       "      <td>1907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7496</th>\n",
+       "      <td>Southeast  Region</td>\n",
+       "      <td>Virgin Islands NP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>National Park</td>\n",
+       "      <td>1906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7497</th>\n",
+       "      <td>Southeast  Region</td>\n",
+       "      <td>Virgin Islands NP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>National Park</td>\n",
+       "      <td>1905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7498</th>\n",
+       "      <td>Southeast  Region</td>\n",
+       "      <td>Virgin Islands NP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>National Park</td>\n",
+       "      <td>1904</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7499 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Unnamed: 0            Acadia   \\\n",
+       "0     Annual Visitation and Record Year by Park (190...                NaN   \n",
+       "1                                                   NaN                NaN   \n",
+       "2                                            RegionName           ParkName   \n",
+       "3                                         Alaska Region   Denali NP & PRES   \n",
+       "4                                         Alaska Region   Denali NP & PRES   \n",
+       "...                                                 ...                ...   \n",
+       "7494                                  Southeast  Region  Virgin Islands NP   \n",
+       "7495                                  Southeast  Region  Virgin Islands NP   \n",
+       "7496                                  Southeast  Region  Virgin Islands NP   \n",
+       "7497                                  Southeast  Region  Virgin Islands NP   \n",
+       "7498                                  Southeast  Region  Virgin Islands NP   \n",
+       "\n",
+       "     2,669,034  Unnamed: 3     Unnamed: 4 Unnamed: 5  \n",
+       "0          NaN         NaN            NaN        NaN  \n",
+       "1          NaN         NaN            NaN        NaN  \n",
+       "2          TRV         NaN       ParkType       Year  \n",
+       "3      427,562         NaN  National Park       2022  \n",
+       "4      229,521         NaN  National Park       2021  \n",
+       "...        ...         ...            ...        ...  \n",
+       "7494       NaN         NaN  National Park       1908  \n",
+       "7495       NaN         NaN  National Park       1907  \n",
+       "7496       NaN         NaN  National Park       1906  \n",
+       "7497       NaN         NaN  National Park       1905  \n",
+       "7498       NaN         NaN  National Park       1904  \n",
+       "\n",
+       "[7499 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parkvisit = pd.read_csv('./data/park visitation.csv')\n",
+    "parkvisit"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea253c57",
+   "id": "0a81cca4",
    "metadata": {},
    "outputs": [],
    "source": []
